{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "6aaba0b8-e0b2-41b2-b8e4-dbf955d26ab4",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "20466499-3ef8-48d1-a115-5d58f0d547e1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c523226c-3ae5-42e4-a1f9-51d5a0a93b85",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}